2006-05-06  Thomas E. Dickey  <dickey@invisible-island.net>

	* sync.c: FROM_KEYS

2006-04-22  Thomas E. Dickey  <dickey@invisible-island.net>

	* tack.1: FROM_KEYS

2005-09-17  Thomas E. Dickey  <dickey@invisible-island.net>

	* ansi.c, pad.c, sysdep.c: FROM_KEYS

	* menu.c, scan.c, tack.c: from ncurses

	* COPYING: fix address

2003-11-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* install-sh: resync with my-autoconf

2002-06-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* mkinstalldirs: RCS_BASE

2001-06-22  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: RCS_BASE

1999-02-07  Thomas E. Dickey  <dickey@clark.net>

	* HISTORY: nit

	* init.c: tweak to make this build after renaming as per Alexander

1998-09-26  Thomas E. Dickey  <dickey@clark.net>

	* edit.c: add param to _nc_tic_expand()

1998-03-28  Thomas E. Dickey  <dickey@clark.net>

	* Makefile.in: updates to sync with ncurses 4.2

1998-02-11  Thomas E. Dickey  <dickey@clark.net>

	* ncurses_tst.hin: FROM_KEYS

1998-01-09  Daniel.Weaver

	* tack.c, Makefile.in, tack.h, control.c, color.c, charset.c, ansi.c, sysdep.c, sync.c, scan.c, pad.c, output.c, modes.c, menu.c, init.c, fun.c, edit.c, crum.c, HISTORY, COPYING:
	tack-1.00

1998-01-03  Thomas E. Dickey  <dickey@clark.net>

	* tack.h: moved ncurses' externs to tic.h

	* edit.c: split-out _nc_tic_expand(), as per DW's request.

	* sysdep.c: nits (we don't _need_ time.h?)

	* tack.h: SCO's compiler doesn't like array-of-const

1998-01-02  Thomas E. Dickey  <dickey@clark.net>

	* control.c: work with no 'gettimeofday()'
	workaround for SCO 3.x compiler which gets confused by array of const.

	* output.c, edit.c, fun.c: SCO's compiler doesn't like array-of-const

	* ansi.c: SCO's compiler: parameter promotion warnings.

1997-12-28  Thomas E. Dickey  <dickey@clark.net>

	* tack.h: first cut of fixes for AIX/SCO/CLIX

	* sysdep.c, control.c: first cut of fixes for AIX/CLIX/SCO

1997-12-27  Thomas E. Dickey  <dickey@clark.net>
